--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-asgiref==3.11.0
-Django==5.2.9
+asgiref==3.8.1
+bootstrap4==0.1.0
+crispy-bootstrap4==2025.6
+Django==5.1.4
+django-crispy-forms==2.5
+pillow==12.0.0
 sqlparse==0.5.4
 tzdata==2025.2
